[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/guis/management_main.gd" type="Script" id=1]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/management_strategies/compost.tscn" type="PackedScene" id=2]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/management_strategies/food_shelter.tscn" type="PackedScene" id=3]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/management_strategies/industrial.tscn" type="PackedScene" id=4]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/management_strategies/landfill.tscn" type="PackedScene" id=5]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/management_strategies/feed_animals.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/thin_pixelated.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/images/paper.png" type="Texture" id=9]
[ext_resource path="res://themes/curry/curry.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 26
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 7 )

[node name="ManagementHander" type="Control"]
anchor_right = 0.53
anchor_bottom = 0.557
margin_right = 0.0199585
margin_bottom = 0.223969
theme = ExtResource( 10 )
script = ExtResource( 1 )

[node name="MainScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ManagementStrategy" type="Label" parent="MainScreen/VBoxContainer"]
margin_right = 723.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Waste Management Strategies"
align = 1
valign = 1
autowrap = true

[node name="ContentFrame" type="HBoxContainer" parent="MainScreen/VBoxContainer"]
margin_top = 44.0
margin_right = 723.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Inedible Waste" type="VBoxContainer" parent="MainScreen/VBoxContainer/ContentFrame"]
margin_right = 227.0
margin_bottom = 383.0
rect_pivot_offset = Vector2( -451, 43 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Waste" type="VBoxContainer" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste"]
margin_right = 227.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 13

[node name="Waste" type="ColorRect" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/Waste"]
margin_right = 227.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/Waste/Waste"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Inedible Waste"
align = 1
valign = 1

[node name="Amount" type="ColorRect" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/Waste"]
margin_top = 77.0
margin_right = 227.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InedibleAmnt" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/Waste/Amount"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Amount"
align = 1
valign = 1

[node name="CompostBlock" type="TextureRect" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste"]
margin_top = 167.0
margin_right = 227.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/CompostBlock"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.99703, 0.994043 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Unlock Through
Tech Upgrade"
align = 1
valign = 1
autowrap = true

[node name="Compost" type="Button" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste"]
visible = false
margin_top = 221.0
margin_right = 227.0
margin_bottom = 289.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Compost"

[node name="IndusBlock" type="TextureRect" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste"]
margin_top = 287.0
margin_right = 227.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/IndusBlock"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.99703, 0.994043 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Unlock Through
Tech Upgrade"
align = 1
valign = 1
autowrap = true

[node name="Industrial" type="Button" parent="MainScreen/VBoxContainer/ContentFrame/Inedible Waste"]
visible = false
margin_top = 314.0
margin_right = 227.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Industrial"

[node name="Text" type="VBoxContainer" parent="MainScreen/VBoxContainer/ContentFrame"]
margin_left = 247.0
margin_right = 475.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Text Info" type="ColorRect" parent="MainScreen/VBoxContainer/ContentFrame/Text"]
margin_right = 228.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="MarginContainer" type="MarginContainer" parent="MainScreen/VBoxContainer/ContentFrame/Text/Text Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0

[node name="Info" type="RichTextLabel" parent="MainScreen/VBoxContainer/ContentFrame/Text/Text Info/MarginContainer"]
margin_right = 188.0
margin_bottom = 243.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "TIP:
Progress through the days and gain customer approval! Once you gain enough satisfaction to merit a skill point, you can choose to unlock  a waste management strategy! Each strategy has its own [tornado radius=2.0 freq=5.0 connected=1][color=green]pros[/color][/tornado] and [shake rate=30.0 level=7 connected=1][color=red]cons[/color][/shake], so choose wisely!"
text = "TIP:
Progress through the days and gain customer approval! Once you gain enough satisfaction to merit a skill point, you can choose to unlock  a waste management strategy! Each strategy has its own pros and cons, so choose wisely!"

[node name="Landfill" type="Button" parent="MainScreen/VBoxContainer/ContentFrame/Text"]
margin_top = 288.0
margin_right = 228.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18
custom_fonts/font = SubResource( 3 )
text = "Landfill"

[node name="Edible Waste" type="VBoxContainer" parent="MainScreen/VBoxContainer/ContentFrame"]
margin_left = 495.0
margin_right = 723.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Waste" type="VBoxContainer" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste"]
margin_right = 228.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 13

[node name="Waste" type="ColorRect" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste/Waste"]
margin_right = 228.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste/Waste/Waste"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 2 )
text = "Edible Waste"
align = 1
valign = 1

[node name="Amount" type="ColorRect" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste/Waste"]
margin_top = 77.0
margin_right = 228.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EdibleAmnt" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste/Waste/Amount"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Amount"
align = 1
valign = 1

[node name="AniBlock" type="TextureRect" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste"]
margin_top = 167.0
margin_right = 228.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste/AniBlock"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.99703, 0.994043 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Unlock Through
Tech Upgrade"
align = 1
valign = 1
autowrap = true

[node name="FeedAnimals" type="Button" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste"]
visible = false
margin_top = 221.0
margin_right = 228.0
margin_bottom = 289.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Feed Animals"

[node name="SheltBlock" type="TextureRect" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste"]
margin_top = 287.0
margin_right = 228.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste/SheltBlock"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.99703, 0.994043 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Unlock Through
Tech Upgrade"
align = 1
valign = 1
autowrap = true

[node name="FoodShelter" type="Button" parent="MainScreen/VBoxContainer/ContentFrame/Edible Waste"]
visible = false
margin_top = 331.0
margin_right = 228.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Food Shelter"

[node name="Compost" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Industrial" parent="." instance=ExtResource( 4 )]
visible = false
margin_right = 0.0
margin_bottom = 0.0

[node name="FeedAnimals" parent="." instance=ExtResource( 6 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="FoodShelter" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Landfill" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="pressed" from="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/Compost" to="." method="_on_Compost_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/ContentFrame/Inedible Waste/Industrial" to="." method="_on_Industrial_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/ContentFrame/Text/Landfill" to="." method="_on_Landfill_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/ContentFrame/Edible Waste/FeedAnimals" to="." method="_on_FeedAnimals_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/ContentFrame/Edible Waste/FoodShelter" to="." method="_on_FoodShelter_pressed"]
